login and register components are completed with API - added ingnore prettier file - document title is dynamic - installed axios

--- a/devUI/public/index.html
+++ b/devUI/public/index.html
@@ -14,7 +14,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
 
-  <title>Dev Social Media for Developers</title>
+  <title>Dev Social Media</title>
 </head>
 
 <body>
